--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="#">Register </a></li>
 				<li><a href="#">Buyers Guide</a></li>
 				<li><a href="#">About</a></li>
-				<li><a href="#">Blog</a></li>
+				<li><a href="#">Blog111</a></li>
 				<li class="no_dot"><a href="#">Contact</a></li>
 			</ul>
 
