--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
 
 			<!--顶部右侧-->
 			<ul class="top_bar">
-				<li class="phone">123 4567 78911</li>
+				<li class="phone">123 4567 7891</li>
 				<li class="help"><a href="#">Live Help</a></li>
+				<li class="space"><a href="#"><img src="img/top1.gif" alt="加拿大" title="加拿大"/></a></li>
+				<li class="space"><a href="#"><img src="img/top2.gif" alt="美国" title="美国"/></a></li>
 			</ul>
 		</div>
-		<div id="header"></div>
+		<!--头部-->
+		<div id="header">
+			<div id="shopping">
+				<p>0 items in your bag</p>
+				<a href="#">Check Out</a>
+			</div>
+			<h1 title="ECOMMERCE WEBSITE"><img src="" alt="" /></h1>
+			<div class="search"></div>
+		</div>
 		<ul id="nav"></ul>
 		<div id="content"></div>
 		<div id="footer"></div>
