--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 		<title>首页</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" href="css/css.css" />
-		
 	</head>
 	<body>
 		<!--/顶部-->
 		<div id="top">
 			<!-- 顶部左侧 -->
 			<ul class="top_menu">
-				<li><a href="#">Account Sign In</a></li>
+				<li><a href="#" class="clearpad">Account Sign In</a></li>
 				<li><a href="#">Register </a></li>
 				<li><a href="#">Buyers Guide</a></li>
 				<li><a href="#">About</a></li>
@@ -34,8 +33,13 @@
 				<p>0 items in your bag</p>
 				<a href="#">Check Out</a>
 			</div>
-			<h1 title="ECOMMERCE WEBSITE"><img src="" alt="" /></h1>
-			<div class="search"></div>
+			<h1 title="ECOMMERCE WEBSITE"><a href="#"><img src="img/logo.png" alt="logo" /></a></h1>
+			<div class="search">
+				<form action="">
+					<input type="text" />
+					<input type="submit"/>
+				</form>
+			</div>
 		</div>
 		<ul id="nav"></ul>
 		<div id="content"></div>
