nav 没有搞好li的背景图
nav 没有搞好li的背景图

--- a/index.html
+++ b/index.html
@@ -36,12 +36,24 @@
 			<h1 title="ECOMMERCE WEBSITE"><a href="#"><img src="img/logo.png" alt="logo" /></a></h1>
 			<div class="search">
 				<form action="">
-					<input type="text" />
-					<input type="submit"/>
+					<input type="text" class="text" value="Search website"/>
+					<input type="button" class="btn" value=""/>
 				</form>
 			</div>
 		</div>
-		<ul id="nav"></ul>
+		<!--导航-->
+		
+		<ul id="nav">
+			<li class="avitve"><a href="#"><strong><span>HOME</span></strong></a></li>
+			<li><a href="#"><strong><span>LATEST ARRIVALS</span></strong></a></li>
+			<li><a href="#"><strong><span>Men's</span></strong></a></li>
+			<li><a href="#"><strong><span>Women's</span></strong></a></li>
+			<li><a href="#"><strong><span>kids</span></strong></a></li>
+			<li><a href="#"><strong><span>Brands</span></strong></a></li>
+			<li><a href="#"><strong><span>Sale</span></strong></a></li>
+			<li><a href="#"><strong><span>Gift Cards</span></strong></a></li>
+			<li><a href="#"><strong><span>Freebies</span></strong></a></li>
+		</ul>
 		<div id="content"></div>
 		<div id="footer"></div>
 	</body>
