--- a/index.html
+++ b/index.html
@@ -54,7 +54,64 @@
 			<li><a href="#"><strong><span>Gift Cards</span></strong></a></li>
 			<li><a href="#"><strong><span>Freebies</span></strong></a></li>
 		</ul>
-		<div id="content"></div>
+		<div id="content">
+			<div id="content_top">
+				<div id="content_bottom">
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+						<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+						<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+						<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+						<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+						<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+					<br />
+				</div>
+			</div>
+		</div>
 		<div id="footer"></div>
 	</body>
 </html>
