--- a/index.html
+++ b/index.html
@@ -269,9 +269,65 @@
 			</div>
 		
 		</div>
+		<!--footer-->
 		<div id="footer">
-			<p class="icon1">Shop online with us safely & securely</p>
-			<p class="icon2">We ship your orders anywhere!</p>
+			<div id="footer_info" >
+				<p class="icon1">Shop online with us safely & securely</p>
+				<p class="icon2">We ship your orders anywhere!</p>
+				<div class="search">
+					<form action="#">
+						<input type="text" class="text" value="Search website"/>
+						<input type="button" class="btn" value=""/>
+					</form>
+				</div>
+			</div>
+			<div id="footer_link">
+			
+				<dl>
+					<dt>Company</dt>
+					<dd><a href="">Home</a></dd>
+					<dd><a href="">About Us</a></dd>
+					<dd><a href="">Blog</a></dd>
+					<dd><a href="">Latest News</a></dd>
+					<dd><a href="">Login</a></dd>
+					<dd><a href="">Join Us</a></dd>
+				</dl>
+				<dl>
+					<dt>Categories</dt>
+					<dd><a href="">Lorem ipsum dolor sit</a></dd>
+					<dd><a href="">Amet consectetur</a></dd>
+					<dd><a href="">Adipiscin elit</a></dd>
+					<dd><a href="">Cras suscipit lacus</a></dd>
+					<dd><a href="">Dapibus ante mattis</a></dd>
+					<dd><a href="">Adipiscing nibh placerat</a></dd>
+				</dl>
+				<dl>
+					<dt>Information</dt>
+					<dd><a href="#">My Account</a></dd>
+				    <dd><a href="#">Rewards</a></dd>
+				    <dd><a href="#">Terms & Conditions</a></dd>
+				    <dd><a href="#">Buying Guide</a></dd>
+				    <dd><a href="#">FAQ</a></dd>
+				</dl>
+				<dl>
+					<dt>Social Network</dt>
+		            <dd><a href="#">My Account</a></dd>
+		            <dd><a href="#">Rewards</a></dd>
+		            <dd><a href="#">Terms & Conditions</a></dd>
+		            <dd><a href="#">Buying Guide</a></dd>
+		            <dd><a href="#">FAQ</a></dd>
+				</dl>
+				<dl>
+						<dt>Contact Us</dt>
+		            <dd><a href="#">Phone: 1.234.567.8901</a></dd>
+		            <dd><a href="#">Toll-Free: 1.234.567.8901</a></dd>
+		            <dd><a href="#">Fax: 1.234.567.8901</a></dd>
+		            <dd><a href="#">Email:<span>Send us an email</span></a></dd>
+		            <dd class="space"><a href="#">MON - SAT 9am to 7:30pm</a></dd>
+		            <dd><a href="#">Sundays, holidays closed</a></dd>
+				</dl>
 		</div>
+		</div>
+		
 	</body>
 </html>
