--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>首页</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" href="css/css.css" />
+		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
 		<!--/顶部-->
@@ -36,7 +37,7 @@
 			<h1 title="ECOMMERCE WEBSITE"><a href="#"><img src="img/logo.png" alt="logo" /></a></h1>
 			<div class="search">
 				<form action="">
-					<input type="text" class="text" value="Search website"/>
+					<input type="text" class="text" id="text1"value="Search website"/>
 					<input type="button" class="btn" value=""/>
 				</form>
 			</div>
@@ -59,6 +60,11 @@
 			<div id="content_top">
 				<div id="content_bottom">
 					<div id="ad">
+					
+						<!--<a href="#" class="prev" style="display: block;"></a>
+						<a href="#" class="next" style="display: block;"></a>
+						<span class="prev_bg"></span>
+						<span class="next_bg"></span>-->
 						<ul>
 							<li><a href=""><img src="img/1.png" alt="" /></a></li>
 						</ul>
@@ -95,7 +101,7 @@
 											<div class="join_form">
 												<p>Join our newsletter list to get the latest updates</p>
 											<form action="#">
-												<input type="text" class="text"/>
+												<input type="text" class="text" id='text1'/>
 												<input type="submit" value="Join Now" class="btn"/>
 											</form>
 											</div>
@@ -276,7 +282,7 @@
 				<p class="icon2">We ship your orders anywhere!</p>
 				<div class="search">
 					<form action="#">
-						<input type="text" class="text" value="Search website"/>
+						<input type="text" class="text" id="text2"value="Search website"/>
 						<input type="button" class="btn" value=""/>
 					</form>
 				</div>
